# water-temp-fishing-guide

./: .gitignore  CLAUDE.md  README.md  beaches_list.txt  fishing.db  pyproject.toml  pytest.ini  railway.toml  requirements.txt  server.json  water-temp-fishing-todo.txt
.ask/: config
alexa_bridge/: handler.py
api/: main.py
db/: init_db.py  schema.sql
deployments/: alexa.md  mcp.md
docs/: index.md  privacy-policy.md  terms.md
ingest/: geo.py  geocode_ingest.py  noaa_ingest.py  noaa_station_index.py  places_ingest.py  scrape_location_index.py  sea_temp_scraper.py  usgs_ingest.py
lambda/: disambiguation.js  fishData.js  index.js  package.json  waterScraper.js
lambda/i18n/: de.js  en.js  es.js  fr.js  index.js  it.js  pt.js
lambda/regions/: europe.js  northAmerica.js  southAmerica.js
lambda/species/: european.js  freshwater.js  saltwater.js  southAmerican.js
mcp_server/: requirements.txt  server.py
scripts/: activity.py  add_international_locations.py  build_osm_beach_list.py  check_beach_coverage.py  fetch_noaa_stations.py  international_aliases_to_add.txt  international_not_covered.txt  noaa_stations_coverage_input.txt
skill-package/: skill.json
skill-package/interactionModels/custom/: de-DE.json  en-US.json  es-ES.json  es-MX.json  fr-FR.json  it-IT.json  pt-BR.json
tests/: conftest.py  test_api.py  test_geocode_ingest.py  test_integration.py  test_mcp_http.py  test_mcp_server.py  test_noaa.py  test_noaa_station_index.py  test_places.py  test_scrape_location_index.py  test_scraper.py  test_usgs.py
