[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "water-conditions-mcp"
version = "1.0.1"
description = "Real-time water temperature and tide predictions for 8,000+ lakes, rivers, beaches, and coastal locations."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["mcp", "water-temperature", "tides", "noaa", "fishing", "weather"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "mcp>=1.28.0",
    "httpx>=0.27.1",
]

[project.urls]
Homepage = "https://github.com/aybeeare/water-temp-fishing-guide"
Repository = "https://github.com/aybeeare/water-temp-fishing-guide"

[project.scripts]
water-conditions-mcp = "mcp_server.server:main"

[tool.hatch.build.targets.wheel]
packages = ["mcp_server"]
